--- a/TeamProject/web/index.html
+++ b/TeamProject/web/index.html
@@ -1,3 +1,11 @@
 <script>
 	location.href="index.mc";
+	
+	/*
+ 	 location.href
+	 1) 현재 접속중인 페이지 정보를 갖는다.
+            location.href; // 현재 페이지 확인
+	 2) 값을 변경한다.(ex 다른 페이지로 이동)
+	    location.href="이동할 페이지 주소"; // 페이지 이동
+	*/
 </script>
